--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,7 +33,15 @@ h1 {
   align-items: center;
   background-color: #023031;
   display: flex;
+  flex-direction: column;
+  gap: 40px;
   height: 500px;
   justify-content: center;
   width: 50%;
+}
+
+.cards-area {
+  background-color: #fafafa;
+  display: flex;
+  gap: 30px;
 }
